--- a/app/src/main/res/layout/activity_menu_toolbar.xml
+++ b/app/src/main/res/layout/activity_menu_toolbar.xml
@@ -9,9 +9,12 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout_id"
         android:layout_width="396dp"
-        android:layout_height="34dp"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:tabTextColor="@color/white"
+        app:tabBackground="@color/bluesky"
+        app:tabSelectedTextColor="@color/grey"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.viewpager.widget.ViewPager
