--- a/app/src/main/res/layout/activity_home_menu.xml
+++ b/app/src/main/res/layout/activity_home_menu.xml
@@ -51,19 +51,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="18dp"
+                    android:layout_marginTop="28dp"
                     android:text="Saldo"
                     android:textColor="@color/white"
                     android:textSize="18dp"
                     android:textStyle="normal" />
 
                 <TextView
-                    android:id="@+id/home_textView_jumlahSaldo"
+                    android:id="@+id/home_textView_rupiah"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="40dp"
-                    android:text="Rp. 3.000.000.000"
+                    android:layout_marginTop="56dp"
+                    android:text="Rp."
                     android:textColor="@color/white"
                     android:textSize="35dp"
                     android:textStyle="bold" />
@@ -73,21 +73,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="90dp"
+                    android:layout_marginTop="105dp"
                     android:layout_marginRight="20dp"
                     android:background="@color/white"
                     android:backgroundTint="@color/white" />
 
                 <TextView
-                    android:id="@+id/home_textView_paymentHistory"
-                    android:layout_width="match_parent"
+                    android:id="@+id/home_textView_jumlahSaldo"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="97dp"
-                    android:text="Payment History"
-                    android:textAlignment="center"
+                    android:text="TextView"
                     android:textColor="@color/white"
-                    android:textSize="17dp"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginTop="56dp"
+                    android:textSize="35dp"
                     android:textStyle="bold" />
+
             </androidx.cardview.widget.CardView>
 
             <TextView
