--- a/app/src/main/res/layout/activity_asuransi_tradisional.xml
+++ b/app/src/main/res/layout/activity_asuransi_tradisional.xml
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
                 android:text="Umur"
                 android:textColor="#000000"
                 android:textSize="18sp"
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="40dp"
                 android:text="Uang Perrtanggungan"
                 android:textColor="#000000"
                 android:textSize="18sp"
@@ -72,7 +72,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/main_textinput_uang"
                 android:layout_width="159dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -90,7 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="45dp"
                 android:text="Masa Pembayaran"
                 android:textColor="#000000"
                 android:textSize="18sp"
@@ -101,7 +101,7 @@
                 android:id="@+id/main_button_hitung"
                 android:layout_width="102dp"
                 android:layout_height="47dp"
-                android:layout_marginTop="580dp"
+                android:layout_marginTop="620dp"
                 android:text="Hitung"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.242"
@@ -112,7 +112,7 @@
                 android:id="@+id/main_button_process"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="580dp"
+                android:layout_marginTop="620dp"
                 android:text="Process"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.376"
@@ -311,7 +311,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/main_textinput_umur"
                 android:layout_width="159dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="33dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -350,7 +350,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/main_textinput_masa"
                 android:layout_width="159dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="33dp"
                 app:layout_constraintEnd_toEndOf="parent"
