--- a/app/src/main/res/layout/activity_asuransi_tradisional.xml
+++ b/app/src/main/res/layout/activity_asuransi_tradisional.xml
@@ -102,6 +102,7 @@
                 android:layout_width="102dp"
                 android:layout_height="47dp"
                 android:layout_marginTop="620dp"
+                android:background="@drawable/support_shape"
                 android:text="Hitung"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.242"
@@ -110,10 +111,12 @@
 
             <Button
                 android:id="@+id/main_button_process"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="620dp"
+                android:background="@drawable/shape_blue_lowradius"
                 android:text="Process"
+                android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.376"
                 app:layout_constraintStart_toEndOf="@+id/main_button_hitung"
