--- a/app/src/main/res/layout/activity_asuransi_tradisional.xml
+++ b/app/src/main/res/layout/activity_asuransi_tradisional.xml
@@ -318,7 +318,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="33dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/main_radiogroup_jeniskelamin">
+                app:layout_constraintTop_toBottomOf="@+id/menu_radiogroup_jeniskelamin">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -329,7 +329,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <RadioGroup
-                android:id="@+id/main_radiogroup_jeniskelamin"
+                android:id="@+id/menu_radiogroup_jeniskelamin"
                 android:layout_width="161dp"
                 android:layout_height="56dp"
                 android:layout_marginTop="21dp"
@@ -338,13 +338,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
                 <RadioButton
-                    android:id="@+id/main_radio1"
+                    android:id="@+id/menu_radio1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Pria" />
 
                 <RadioButton
-                    android:id="@+id/main_radio2"
+                    android:id="@+id/menu_radio2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Wanita" />
