--- a/app/src/main/res/layout/finance_card.xml
+++ b/app/src/main/res/layout/finance_card.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textView23"
+                android:id="@+id/finance_card_namaAsuransi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
@@ -30,7 +30,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView29"
+                android:id="@+id/finance_card_nama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="26dp"
@@ -40,13 +40,13 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView31"
+                android:id="@+id/finance_card_umur"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/textView29"
-                app:layout_constraintStart_toEndOf="@+id/textView23"
+                app:layout_constraintEnd_toStartOf="@+id/finance_card_nama"
+                app:layout_constraintStart_toEndOf="@+id/finance_card_namaAsuransi"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
