--- a/app/src/main/res/layout/activity_home_menu.xml
+++ b/app/src/main/res/layout/activity_home_menu.xml
@@ -185,6 +185,30 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_account_circle" />
 
+            <ImageView
+                android:id="@+id/home_finance"
+                android:layout_width="41dp"
+                android:layout_height="31dp"
+                android:layout_marginEnd="76dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/home_imageSlider"
+                app:layout_constraintVertical_bias="0.382"
+                app:srcCompat="@drawable/ic_balance_wallet" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="35dp"
+                android:layout_height="34dp"
+                android:layout_marginStart="84dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/home_imageSlider"
+                app:layout_constraintVertical_bias="1.0"
+                app:srcCompat="@drawable/ic_home" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
