--- a/app/src/main/res/layout/activity_plan100_info.xml
+++ b/app/src/main/res/layout/activity_plan100_info.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context=".plan100_info">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="378dp"
         android:layout_height="405dp"
@@ -251,4 +251,5 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
