--- a/app/src/main/res/layout/finance_card.xml
+++ b/app/src/main/res/layout/finance_card.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/item_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -25,6 +26,7 @@
                 android:layout_marginTop="36dp"
                 android:layout_marginBottom="36dp"
                 android:text="TextView"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -35,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="26dp"
                 android:text="TextView"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -44,6 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
+                android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/finance_card_nama"
                 app:layout_constraintStart_toEndOf="@+id/finance_card_namaAsuransi"
