--- a/app/src/main/res/layout/activity_form_plan100.xml
+++ b/app/src/main/res/layout/activity_form_plan100.xml
@@ -282,6 +282,16 @@
                     android:layout_height="wrap_content"
                     android:text="Wanita" />
             </RadioGroup>
+
+            <ImageView
+                android:id="@+id/formplan100_imageView_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="@+id/formplan_toolbar"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
