--- a/app/src/main/res/layout/activity_form_plan100.xml
+++ b/app/src/main/res/layout/activity_form_plan100.xml
@@ -253,10 +253,12 @@
 
             <Button
                 android:id="@+id/form_button"
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="150dp"
-                android:text="Button"
+                android:background="@drawable/button_color"
+                android:text="Simpan"
+                android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/form_textinput_uangpertanggungan" />
