--- a/app/src/main/res/layout/activity_asuransi_tradisional.xml
+++ b/app/src/main/res/layout/activity_asuransi_tradisional.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="40dp"
-                android:text="Uang Perrtanggungan"
+                android:text="Uang Pertanggungan"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
