--- a/app/src/main/res/layout/activity_asuransi_tradisional.xml
+++ b/app/src/main/res/layout/activity_asuransi_tradisional.xml
@@ -33,6 +33,16 @@
                 app:title="Asuransi Tradisional Ilustrasi"
                 app:titleTextColor="#FFFFFF" />
 
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
@@ -105,21 +115,7 @@
                 android:background="@drawable/support_shape"
                 android:text="Hitung"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.242"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
-            <Button
-                android:id="@+id/main_button_process"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="620dp"
-                android:background="@drawable/shape_blue_lowradius"
-                android:text="Process"
-                android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.376"
-                app:layout_constraintStart_toEndOf="@+id/main_button_hitung"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
             <TextView
@@ -292,24 +288,12 @@
                 app:layout_constraintTop_toTopOf="@+id/textView28" />
 
             <TextView
-                android:id="@+id/textView30"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Masa Asuransi"
-                android:textColor="#000000"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView28" />
-
-            <TextView
                 android:id="@+id/plan100_masaa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="81dp"
                 android:textColor="#000000"
-                app:layout_constraintStart_toEndOf="@+id/textView30"
-                app:layout_constraintTop_toTopOf="@+id/textView30" />
+                tools:layout_editor_absoluteX="190dp"
+                tools:layout_editor_absoluteY="633dp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/main_textinput_umur"
