--- a/app/src/main/res/layout/activity_asuransi_tradisional.xml
+++ b/app/src/main/res/layout/activity_asuransi_tradisional.xml
@@ -27,6 +27,7 @@
                 android:theme="?attr/actionBarTheme"
                 app:collapseIcon="@drawable/ic_baseline_arrow_back_24"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:navigationIcon="@drawable/abc_vector_test"
