--- a/app/src/main/res/layout/finance_card.xml
+++ b/app/src/main/res/layout/finance_card.xml
@@ -35,21 +35,22 @@
                 android:id="@+id/finance_card_nama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="26dp"
+                android:layout_marginEnd="176dp"
                 android:text="TextView"
                 android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.493" />
 
             <TextView
                 android:id="@+id/finance_card_umur"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="252dp"
                 android:text="TextView"
                 android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/finance_card_nama"
                 app:layout_constraintStart_toEndOf="@+id/finance_card_namaAsuransi"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -84,7 +85,8 @@
                 android:text="Nama"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/textView29"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.506" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
