new initial commit

--- a/app/src/main/res/layout/activity_asuransi_kesehatan.xml
+++ b/app/src/main/res/layout/activity_asuransi_kesehatan.xml
@@ -206,10 +206,12 @@
 
     <Button
         android:id="@+id/kesehatan_button"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="120dp"
+        android:background="@drawable/button_color"
         android:text="Hitung"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView61" />
