--- a/app/src/main/res/layout/activity_asuransi_kendaraan.xml
+++ b/app/src/main/res/layout/activity_asuransi_kendaraan.xml
@@ -89,10 +89,12 @@
 
     <Button
         android:id="@+id/kendarran_button"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="Button"
+        android:background="@drawable/button_color"
+        android:text="HITUNG"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
